--- a/views/index.html
+++ b/views/index.html
@@ -193,7 +193,7 @@
             </el-footer>
         </el-container>
     </div>
-    <script src="//unpkg.com/vue/dist/vue.js"></script>
+    <script src="//unpkg.com/vue/dist/vue.min.js"></script>
     <script src="//unpkg.com/element-ui/lib/index.js"></script>
     <script src="//unpkg.com/axios/dist/axios.min.js"></script>
     <script>
