change table empty text

--- a/views/index.html
+++ b/views/index.html
@@ -166,7 +166,7 @@
                         </el-form-item>
                     </el-form>
                     <template>
-                        <el-table :data="history" border max-height="240" style="width: 100%">
+                        <el-table :data="history" border max-height="240" style="width: 100%" empty-text="No data available">
                             <el-table-column prop="type" label="type" width="300">
                             </el-table-column>
                             <el-table-column prop="amount" label="amount" width="300">
